@@ -1,3 +1,9 @@
+2008-02-05  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* configure.in:
+	* src/twitux-network.c: Update to libsoup-2.4 api
+	Patch from Dan Winship.
+
 2008-02-04  Daniel Morales  <daniminas@gmail.com>
 
 	* data/preferences_dialog.glade:
